<resources>
    <string name="app_name">VoteBoat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_up">Sign Up</string>
    <string name="or">"- OR - "</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Log In</string>

    <!--  for Facebook SDK  -->
    <string name="facebook_app_id">647670929440821</string>
    <string name="polling_locations">Election Day Polls</string>
    <string name="n_a">N/A</string>
    <string name="absentee_locations">Absentee Ballot Drop Off Location</string>
    <string name="early_polling_locations">Early Vote Sites</string>
    <string name="empty_poll">No election day polls nearby</string>
    <string name="empty_early_vote_site">No early voting sites nearby</string>
    <string name="empty_drop_off_site">No absentee ballot drop off locations nearby</string>
</resources>