<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".fragments.ElectionDetailFragment">


        <TextView
            android:id="@+id/tvElectionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textAppearanceBody1"
            android:textSize="28sp"
            android:transitionName="electionTitle"
            tools:text="Election 1" />

        <TextView
            android:id="@+id/tvDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvElectionName"
            android:layout_alignStart="@id/tvElectionName"
            android:layout_marginTop="5dp"
            android:textColor="?attr/textAppearanceBody1"
            android:textSize="18sp"
            tools:text="Election Day: " />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvDateText"
            android:layout_alignBottom="@+id/tvDateText"
            android:layout_toEndOf="@+id/tvDateText"
            android:textColor="?attr/textAppearanceBody2"
            android:textSize="16sp"
            tools:text="06/21/2020" />

        <TextView
            android:id="@+id/tvPollTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDate"
            android:layout_marginTop="20dp"
            android:text="@string/polling_locations"
            android:textColor="?attr/textAppearanceBody1"
            android:textSize="20sp" />

        <include
            android:id="@+id/electionDayPoll"
            layout="@layout/item_poll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPollTitle"
            android:layout_alignStart="@id/tvElectionName" />

        <TextView
            android:id="@+id/tvAbsenteeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/electionDayPoll"
            android:layout_marginTop="20dp"
            android:text="@string/absentee_locations"
            android:textColor="?attr/textAppearanceBody1"
            android:textSize="20sp" />

        <include
            android:id="@+id/absenteePoll"
            layout="@layout/item_poll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAbsenteeTitle"
            android:layout_alignStart="@id/tvElectionName" />


        <TextView
            android:id="@+id/tvEarlyPollTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/absenteePoll"
            android:layout_marginTop="20dp"
            android:text="@string/early_polling_locations"
            android:textColor="?attr/textAppearanceBody1"
            android:textSize="20sp" />

        <include
            android:id="@+id/earlyPoll"
            layout="@layout/item_poll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEarlyPollTitle"
            android:layout_alignStart="@id/tvElectionName" />


        <LinearLayout
            android:id="@+id/llLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/earlyPoll"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Absentee Voting:"
                android:textColor="?attr/textAppearanceBody2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAbsentee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/n_a"
                android:textColor="?attr/textAppearanceBody2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Election Information:"
                android:textColor="?attr/textAppearanceBody2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvElectionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/n_a"
                android:textColor="?attr/textAppearanceBody2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register here:"
                android:textColor="?attr/textAppearanceBody2"

                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/n_a"
                android:textColor="?attr/textAppearanceBody2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="Election Rules:"
                android:textColor="?attr/textAppearanceBody2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/n_a"
                android:textColor="?attr/textAppearanceBody2" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llLinks"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/colorButtonNormal"
            android:padding="10dp"
            android:text="Who is Running?"
            android:textColor="?attr/textAppearanceButton" />


    </RelativeLayout>
</ScrollView>
